force-app/main/default/objects/SMS_CloudCMA_Settings__c/SMS_CloudCMA_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CloudCMA API settings</description>
    <label>SMS CloudCMA Settings</label>
</CustomObject>