force-app/main/default/objects/SMS_CloudCMA_Settings__c/fields/AFFILIATE_TOKEN__c.field-meta.xml
<CustomField>
    <fullName>AFFILIATE_TOKEN__c</fullName>
    <label>AFFILIATE_TOKEN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>