force-app/main/default/objects/SMS_CloudCMA_Settings__c/fields/API_KEY__c.field-meta.xml
<CustomField>
    <fullName>API_KEY__c</fullName>
    <label>API_KEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>