force-app/main/default/objects/SMS_CloudCMA_Settings__c/fields/MLS_CODE__c.field-meta.xml
<CustomField>
    <fullName>MLS_CODE__c</fullName>
    <label>MLS_CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>