force-app/main/default/objects/SMS_CloudCMA_Settings__c/fields/SERVICE_URL__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_URL__c</fullName>
    <label>SERVICE_URL</label>
    <type>Url</type>
</CustomField>